--- a/templates/index.html
+++ b/templates/index.html
@@ -9,36 +9,17 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
     <title>Flask app</title>
     <style>
-        .login-btn {
-    justify-content: center;
-    flex-direction: row;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    justify-content: center;
-    align-items: center;
-    width: 220px;
-    padding: 10px;
-    box-shadow: 3px 3px 3px rgb(170, 170, 170);
-    border-radius: 15px;
-}
-.btn-text {
-    justify-content: center;
-    padding: 10px;
-    font-family: 'Poppins', sans-serif;
-    color: rgb(85, 85, 85);
-}
+    a{
+        display: block;
+    }
     </style>
 </head>
 <body>
         <div align="center">
-            <a href="google/" class="login-btn" style="text-decoration:none;">
-                <img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png"
-            alt="Google"
-            style="width:50px;height:50px;">
-            <div class="btn-text">
-                Login with Google
-            </div>
-            </a>
+         Świetna stronka
         </div>
+        <a href="/events">Nadchodzące zajęcia</a>
+        <a href="/clubs"> Kluby do których jesteś zapisany</a>
+
 </body>
 </html>
