entering data to edit

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css') }}">
-    <title>Flask app</title>
-    <style>
-    a{
-        display: block;
-    }
-    </style>
-</head>
-<body>
-        <div align="center">
-         Świetna stronka
-        </div>
-        <a href="/events">Nadchodzące zajęcia</a>
-        <a href="/clubs"> Kluby do których jesteś zapisany</a>
-
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="{{ url_for('static',filename='styles.css') }}"
+		/>
+		<title>Flask app</title>
+		<style>
+			a {
+				display: block;
+			}
+		</style>
+	</head>
+	<body>
+		<div align="center">Świetna stronka</div>
+		<a href="/user/events">Nadchodzące zajęcia</a>
+		<a href="/user/clubs"> Kluby do których jesteś zapisany</a>
+	</body>
 </html>
