--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<form action="/user/edited" method="post">
-			<label for="name">Nazwa wydarzenia</label><br />
-			<input type="text" name="name" /> <br /><br />
+			<label for="title">Nazwa wydarzenia</label><br />
+			<input type="text" name="title" id="title" /> <br /><br />
 
 			<label for="time">Rozpoczęcie treningu</label><br />
 			<input type="datetime-local" id="time" name="time" />
@@ -24,7 +24,7 @@
 				value="{{eventId}}"
 			/>
 
-			<input type="submit" value="Utwórz" />
+			<input type="submit" value="Zmień" />
 		</form>
 	</body>
 </html>
