routes and tables

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
         <div align="center">
          Świetna stronka
         </div>
-        <a href="/events">Nadchodzące zajęcia</a>
-        <a href="/clubs"> Kluby do których jesteś zapisany</a>
+        <a href="/user/events">Nadchodzące zajęcia</a>
+        <a href="/user/clubs"> Kluby do których jesteś zapisany</a>
 
 </body>
 </html>
