event routes reorganization

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 		<title>Dołącz do treningów</title>
 	</head>
 	<body>
-		<form action="/user/edited" method="post">
+		<form action="/event/edited" method="post">
 			<label for="title">Nazwa wydarzenia</label><br />
 			<input type="text" name="title" id="title" /> <br /><br />
 
