--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div align="center">
          Świetna stronka
         </div>
-        <a href="/user/events">Nadchodzące zajęcia</a>
+        <a href="/event/list">Nadchodzące zajęcia</a>
         <a href="/user/clubs"> Kluby do których jesteś zapisany</a>
 
 </body>
