saving users in db

--- a/templates/list.html
+++ b/templates/list.html
@@ -17,6 +17,13 @@
 			<input type="number" id="duration" name="duration" required />
 			<br /><br />
 
+            <label for="club">Klub</label><br />
+            <select name="club" id="club" required>
+                <option value="1">Test Club</option>
+                <option value="12">Test Club 2 (nie ma xd)</option>
+            </select>
+			<br /><br />
+
 			<input type="submit" value="Utwórz" />
 		</form>
 		<ul>
