--- a/templates/clubs.html
+++ b/templates/clubs.html
@@ -39,6 +39,7 @@
 					<a href="/club/leave?clubID={{club[1]}}">Opuść</a>
 					{% endif %}
 					<a href="/club/remove?clubID={{club[1]}}">Usuń</a>
+                    <a href="/club/stats?clubID={{ club[1] }}">Statystyki</a>
 				</p>
 			</li>
 			{% endfor %}
