--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,24 @@
         display: block;
     }
     </style>
+      <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-        <div align="center">
-         Świetna stronka
-        </div>
-        <a href="/event/list">Nadchodzące zajęcia</a>
-        <a href="/user/clubs"> Kluby do których jesteś zapisany</a>
+<section class="py-24 flex items-center min-h-screen justify-center bg-white">
+  <div class="mx-auto max-w-[43rem]">
+    <div class="text-center">
+      <p class="text-lg font-medium leading-8 text-indigo-600/95"></p>
+      <h1 class="mt-3 text-[3.5rem] font-bold leading-[4rem] tracking-tight text-black">Organizer Treningów</h1>
+      <p class="mt-3 text-lg leading-relaxed text-slate-400">Ułatwia planowanie i komunikację</p>
+    </div>
+
+    <div class="mt-6 flex items-center justify-center gap-4">
+      <a href="/event/list" class="transform rounded-md bg-indigo-600/95 px-5 py-3 font-medium text-white transition-colors hover:bg-indigo-700">Nadchodzące zajęcia</a>
+      <a href="/user/clubs" class="transform rounded-md border border-slate-200 px-5 py-3 font-medium text-slate-900 transition-colors hover:bg-slate-50">Kluby do których jesteś zapisany</a>
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
